# Arishem

./: .env.example  .gitignore  README.md  arishem.config.toml  docker-compose.yml  pyproject.toml  report.html  requirements.txt  target_example.py  target_ws_chat.py
arishem/: __init__.py  cli.py  generator.py  judge.py  llm.py  loader.py  models.py  observer.py  orchestrator.py  probe_session.py  store.py
arishem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
arishem/attack_classes/: __init__.py  base.py  cascading_failure.py  context_poisoning.py  goal_hijacking.py  insecure_delegation.py  persistent_drift.py  privilege_abuse.py  tool_misuse.py  trust_exploitation.py  unsafe_execution.py
arishem/reporters/: console.py  html.py  sarif.py
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/alerts/: alerts.go  alerts_test.go
backend/internal/api/: alerts.go  api_test.go  integrations.go  (+6 more)
caddy/: Caddyfile
frontend/: index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
frontend/src/: App.vue  main.ts
migrations/: 001_initial_schema.sql
scanner/: pyproject.toml
scanner/code_scanner/: runner.py
scanner/llm_pentests/: conftest.py  report_generator.py  runner.py
scanner/llm_pentests/tests/: test_data_exfiltration.py  test_dos.py  test_excessive_agency.py  test_insecure_output.py  test_jailbreak.py  test_prompt_injection.py  test_system_prompt_extraction.py
tests/: test_cli.py  test_config.toml  test_llm.py  test_loader.py  test_orchestrator.py
(+33 files in other folders)
