[project]
name = "arishem"
version = "0.1.0"
description = "Autonomous AI Security Testing Engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.23.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "requests>=2.34.2",
    "websockets>=16.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "litellm>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
arishem = "arishem.cli:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arishem*"]
exclude = ["tests*", "backend*", "frontend*", "scanner*", "migrations*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-json-report>=1.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-json-report>=1.5.0",
]