[project]
name = "arishem-scanner"
version = "0.1.0"
description = "Arishem LLM and Code Scanner"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
    "litellm>=1.0.0",
    "jinja2>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]